plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.dataury'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'mysql:mysql-connector-java:8.0.30'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리용
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.4'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	
	// Flyway for MySQL migrations
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	implementation 'com.google.auth:google-auth-library-oauth2-http:1.19.0'
	implementation 'com.google.cloud:google-cloud-vision:3.31.0'
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'

	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	implementation 'org.springframework.boot:spring-boot-starter-cache'

	// Caffeine 캐시 엔진
	implementation 'com.github.ben-manes.caffeine:caffeine'  // 버전은 Spring Boot BOM이 관리
	// (버전 명시가 필요하면 예: implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8')
	
	// ShedLock for 분산 환경에서 스케줄러 중복 실행 방지
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.13.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.13.0'


}

tasks.named('test') {
	useJUnitPlatform()
}

configurations.all {
	exclude group: "commons-logging", module: "commons-logging"
}
